--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Sanskar gupta",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2"
   }
 }
